# seerep

./: .clang-format  .clang-uml  .devcontainer.json  .devcontainerPostCreateCommand.sh  .gitignore  .gitlab-ci.yml  .gitmodules  .hadolint.yaml  .isort.cfg  .markdownlint.json  .mdl_style.rb  .pre-commit-config.yaml  AGProtoHDF5Config.cmake.in  AGProtoHDF5Config.h.in  AgriGaiaMsgsConfig.cmake.in  AgriGaiaMsgsConfig.h.in  CITATION.cff  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  MANIFEST.in  README.md  cmake-format.py  installDependencies.sh  mkdocs.yml  output_coco_format.json  package.xml  pyproject.toml  seerep.cfg  setup.py  start_server.sh  tox.ini
examples/cpp/: CMakeLists.txt  package.xml
examples/performance-tests/: CMakeLists.txt  README.md  package.xml  run.py
seerep-com/: CMakeLists.txt  SeerepComConfig.h.in  package.xml
seerep-com/cmake/: BuildFlatBuffers.cmake  FindFlatBuffers.cmake  ProtobufGenerateGrpcCpp.cmake  ProtobufGenerateGrpcPython.cmake
seerep-com/fbs/: camera_intrinsics.fbs  camera_intrinsics_service.fbs  image-service.fbs  instance_service.fbs  meta-operations.fbs  meta_operations.fbs  point_service.fbs  transfer-sensor-msgs.fbs  transfer_sensor_msgs.fbs
seerep-com/protos/: imageService.proto  meta-operations.proto  meta_operations.proto  point-cloud-service.proto  query_data.proto  tf-service.proto  tfService.proto  tf_service.proto  transfer_sensor_msgs.proto
seerep-hdf5/seerep-core-io/: CMakeLists.txt  package.xml
seerep-hdf5/seerep-hdf5-core/: CMakeLists.txt  package.xml
seerep-hdf5/seerep-hdf5-fb/: CMakeLists.txt  package.xml
seerep-hdf5/seerep-hdf5-pb/: CMakeLists.txt  README.md  package.xml
seerep-hdf5/seerep-hdf5-py/: CMakeLists.txt  README.md  package.xml
seerep-hdf5/seerep-hdf5-ros/: CMakeLists.txt  package.xml
seerep-hdf5/seerep-io-core/: CMakeLists.txt  package.xml
seerep-hdf5/seerep-io-fb/: CMakeLists.txt  README.md  package.xml
seerep-hdf5/seerep-io-pb/: CMakeLists.txt  package.xml
seerep-hdf5/seerep-pb-io/: CMakeLists.txt  package.xml
seerep-msgs/: AGProtoMsgsConfig.cmake.in  AGProtoMsgsConfig.h.in  CMakeLists.txt  README.md  SeerepMsgsConfig.cmake.in  package.xml
seerep-msgs/cmake/: BuildFlatBuffers.cmake
seerep-msgs/core/: aabb.h  boundingbox.h  camera_intrinsics.h  camera_intrinsics_query.h  dataset-indexable.h  datatype.h  geodetic-coordinates.h  header.h  label-with-instance.h  labels-with-instance-with-category.h  point.h  project-info.h  query-result-project.h  query-result.h  query-tf.h  query.h  timeinterval.h  timestamp.h
seerep-msgs/fbs/: boundingbox.fbs  boundingbox2d.fbs  boundingbox2d_labeled.fbs  boundingbox2d_labeled_with_category.fbs  boundingbox2d_stamped.fbs  boundingbox_labeled.fbs  boundingbox_labeled_with_category.fbs  boundingboxes2d_labeled_stamped.fbs  camera_intrinsics.fbs  camera_intrinsics_query.fbs  frame_infos.fbs  frame_query.fbs  geodeticCoordinates.fbs  header.fbs  image.fbs  label.fbs  label_with_instance.fbs  labels_with_category.fbs  point.fbs  point2d.fbs  point_cloud_2.fbs  point_field.fbs  point_stamped.fbs  polygon.fbs  polygon_stamped.fbs  pose.fbs  pose_stamped.fbs  projectCreated.fbs  projectCreation.fbs  project_info.fbs  project_infos.fbs  project_uuids.fbs  quaternion.fbs  quaternion_stamped.fbs  query.fbs  query_instance.fbs  region_of_interest.fbs  server_response.fbs  time_interval.fbs  timestamp.fbs  (+11 more)
seerep-msgs/protos/: bounding_box_2d.proto  bounding_box_2d_labeled.proto  bounding_box_2d_labeled_with_category.proto  bounding_box_2d_stamped.proto  bounding_box_labeled.proto  bounding_box_labeled_with_category.proto  bounding_box_stamped.proto  boundingbox.proto  boundingbox2d.proto  boundingbox2d_labeled.proto  boundingbox2d_labeled_with_category.proto  boundingbox2d_stamped.proto  boundingbox3D_labeled.proto  boundingbox_labeled.proto  boundingbox_labeled_with_category.proto  boundingbox_stamped.proto  datatype.proto  frame_infos.proto  frame_query.proto  header.proto  image.proto  image_labeled.proto  label.proto  label_with_instance.proto  labels_with_category.proto  labels_with_instance_with_category.proto  point.proto  point_2d.proto  point_cloud_2.proto  point_cloud_2_labeled.proto  point_field.proto  point_stamped.proto  polygon.proto  polygon_stamped.proto  pose.proto  pose_stamped.proto  projectCreated.proto  projectCreation.proto  project_creation.proto  project_info.proto  (+20 more)
seerep-ros/seerep_ros_communication/: CMakeLists.txt  package.xml
seerep_msgs/: CMakeLists.txt  README.md  SeerepMsgsConfig.cmake.in  SeerepMsgsConfig.h.in  package.xml
seerep_msgs/cmake/: BuildFlatBuffers.cmake
seerep_msgs/core/: aabb.h  camera_intrinsics.h  dataset_indexable.h  datatype.h  geodetic_coordinates.h  header.h  label.h  label_category.h  label_datumaro.h  label_with_instance.h  labels_with_instance_with_category.h  polygon2d.h  project_info.h  quaternion.h  query.h  query_result.h  query_result_project.h  query_tf.h  region_of_interest.h  sparql_query.h  timeinterval.h  timestamp.h  timestamp_frame_mesh.h  timestamp_frame_points.h
seerep_msgs/fbs/: attributes_stamped.fbs  boundingbox.fbs  boundingbox2d.fbs  boundingbox2d_labeled.fbs  boundingbox2d_labeled_with_category.fbs  boundingbox2d_stamped.fbs  boundingbox_labeled.fbs  boundingbox_labeled_with_category.fbs  boundingbox_stamped.fbs  boundingboxes2d_labeled_stamped.fbs  boundingboxes_labeled_stamped.fbs  camera_intrinsics.fbs  camera_intrinsics_query.fbs  categories.fbs  dataset_uuid_label.fbs  datatype.fbs  empty.fbs  frame_infos.fbs  frame_query.fbs  geodeticCoordinates.fbs  header.fbs  image.fbs  label.fbs  label_category.fbs  label_with_instance.fbs  labels.fbs  labels_with_category.fbs  labels_with_instance_with_category.fbs  point.fbs  point2d.fbs  point_cloud_2.fbs  point_field.fbs  point_stamped.fbs  polygon.fbs  polygon2d.fbs  polygon_stamped.fbs  pose.fbs  pose_stamped.fbs  projectCreation.fbs  project_info.fbs  (+26 more)
seerep_msgs/protos/: boundingbox2d_labeled.proto  boundingbox2d_labeled_with_category.proto  boundingbox_labeled_with_category.proto  (+32 more)
seerep_util/: CMakeLists.txt  package.xml
(+4007 files in other folders)
