<?xml version="1.0"?>
<package format="2">
  <name>agri_gaia_ros</name>
  <version>0.0.1</version>
  <description>The agri_gaia_ros package</description>

  <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>

  <license>BSD-3</license>

  <author email="spuetz@uos.de">Sebastian Pütz</author>

  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <buildtool_depend>catkin</buildtool_depend>

</package>
