[build-system]
requires = ["setuptools>=70", "setuptools_scm[toml]>=8.1","grpcio-tools==1.53.2"]
build-backend = "setuptools.build_meta"

[project]
name = "seerep_grpc"
description = "Package for the SEEREP gRPC API"
readme = "docs/pypi/README.md"
license = {text = "BSD 3-Clause License"}
requires-python = ">=3.8"
keywords = ["SEEREP, gRPC, Protocol Buffers", "Flatbuffers"]
authors = [
    {name = "Mark Niemeyer", email = "mark.niemeyer@dfki.de"}
]
dependencies = [
    "protobuf == 4.21.12",
    "flatbuffers == 22.12.6",
    "grpcio == 1.53.2",
]
dynamic = ["version"]

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"

[project.urls]
Repository = "https://github.com/agri-gaia/seerep"
Documentation = "https://agri-gaia.github.io/seerep/mkdocs/home/index.html"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests/"
]
pythonpath = [
  "examples/python",
  "tests/python"
]

[tool.ruff]
line-length = 80
target-version = 'py38'
exclude = ["docs/", "cmake-format.py"]

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
    "C4", # flake8-comprehensions
    "B", # flake8-bugbear
    "A", # flake8-builtins
    "PL" # pylint
]
ignore = [
    "E402", # module level import not at top of cell
    "PLR0913", # to many arguments in function definition
    "PLR2004", # magic value used in comparison
    "B008", # do not perform function call default argument
    "PLR0915", # to many statements
    "B006", # do not use mutable data strucres for arguments defaults
    "PLR0912" # to many branches
]
