<?xml version="1.0"?>
<package format="2">
  <name>seerep-com</name>
  <version>0.0.1</version>
  <description> The seerep-com package. </description>

  <maintainer email="mark.niemeyer@dfki.de">Mark Niemeyer</maintainer>
  <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>

  <license>BSD-3</license>

  <url type="website">TODO</url>

  <author email="mark.niemeyer@dfki.de">Mark Niemeyer</author>
  <author email="spuetz@uos.de">Sebastian Pütz</author>

  <depend>seerep_msgs</depend>
  <buildtool_depend>cmake</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
