<?xml version="1.0"?>
<package format="2">
  <name>seerep-msgs</name>
  <version>0.0.1</version>
  <description> The seerep-msgs package. </description>

  <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>

  <license>TODO</license>

  <url type="website">TODO</url>

  <author email="spuetz@uos.de">Sebastian Pütz</author>

  <buildtool_depend>cmake</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
