<?xml version="1.0"?>
<package format="2">
  <name>seerep_util</name>
  <version>0.0.1</version>
  <description> The seerep util package</description>

  <maintainer email="julian.arkenau@dfki.de">Julian Arkenau</maintainer>

  <license>BSD-3</license>

  <url type="website">TODO</url>

  <author email="julian.arkenau@dfki.de">Julian Arkenau</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
